--- a/docs/inversion/fundamentals.ipynb
+++ b/docs/inversion/fundamentals.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1d74e4ae",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5c9df792",
    "metadata": {},
    "outputs": [],
@@ -108,10 +108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "aea2444f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.dot(F, [0.5, 0.25])"
    ]
@@ -194,6 +205,7 @@
     "### Example\n",
     "\n",
     "We can reuse the two-parameter problem above to illustrate the inverse problem. We are going to ignore the issue of noise for now and simply look at the under-determined problem\n",
+    "\n",
     "$$\n",
     "\\large[\\begin{array}{ccc}\n",
     "1 & 2\n",
@@ -228,17 +240,73 @@
     "\\mathbf{m} =(\\mathbf{F}^T \\mathbf{F})^{-1}(\\mathbf{F}^T 1)\\;.\n",
     "$$\n",
     "\n",
-    "but even here $(\\mathbf{F}^T \\mathbf{F})^{-1}$ is singular and cannot be inverted directly."
+    "but even here $(\\mathbf{F}^T \\mathbf{F})^{-1}$ is singular and cannot be inverted directly as shown below"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b2622335",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Singular matrix\n"
+     ]
+    }
+   ],
    "source": [
-    "m = np.linalg.solve(np.dot(F.T, F) + np.eye(2), F.T * np.r_[1])"
+    "try:\n",
+    "    np.linalg.solve(np.dot(F.T, F), F.T * np.r_[1])\n",
+    "except Exception as error:\n",
+    "    print(error)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a04419c",
+   "metadata": {},
+   "source": [
+    "We can get around this by adding a small value to `regularize` the system such that\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{m} =(\\mathbf{F}^T \\mathbf{F} + \\delta \\mathbf{I})^{-1}(\\mathbf{F}^T 1)\\;.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0d01b404",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.2],\n",
+       "       [0.4]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.solve(\n",
+    "    np.dot(F.T, F)  + 1e-12 * np.eye(2), \n",
+    "    F.T * np.r_[1]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1875c12",
+   "metadata": {},
+   "source": [
+    "We have found a solution to this under-determined problem: $m = [0.2,\\; 0.4]$. This result is known as the `least-norm` solution, which differs from the true answer $m = [0.5, \\;0.25]$. Other \"better\" solutions could be found if more information is provided to the inverse problem to push the model towards expected values. This will be the topic of the [Regularization Section](regularization.ipynb)"
    ]
   },
   {
@@ -255,6 +323,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
