--- a/docs/inversion/data_misfit.ipynb
+++ b/docs/inversion/data_misfit.ipynb
@@ -15,7 +15,7 @@
     "\\phi_d =\\sum_{i=1}^{N}\\left(\\frac{d_i^{pred} - {d}_i^{obs}}{w_i}\\right)^2 \\;.\n",
     "$$\n",
     "\n",
-    "It measures the sum of **weighted residual** between observed ($\\mathbf{d}^{obs}$) and predicted ($\\mathbf{d}^{pre}$) data. In matrix form, this least-square measure can be written as\n",
+    "It measures the sum of **weighted residual** between observed ($\\mathbf{d}^{obs}$) and predicted ($\\mathbf{d}^{pred}$) data. In matrix form, this least-square measure can be written as\n",
     "\n",
     "$$\n",
     "\\phi_d =(F(\\mathbf{m}) - \\mathbf{d}^{obs})^T \\mathbf{W}_d^T \\mathbf{W}_d (F(\\mathbf{m}) - \\mathbf{d}^{obs})\\;,\n",
@@ -25,7 +25,7 @@
     "\n",
     "\n",
     " - Experimental noise from $\\mathbf{d}^{obs}$, generally introduced during acquisition (positioning, instrumental noise)\n",
-    " - Numerically noise introduced by $F(\\mathbf{m})$ from our ability to accurately simulate the physics (discretization, interpolation, etc.)\n",
+    " - Numerical noise introduced by $F(\\mathbf{m})$ from our inability to perfectly simulate the physics (discretization, interpolation, etc.)\n",
     "\n",
     "In all cases, we may never expect the data residual to completely vanish, but we may allow it to be within an *acceptable* level of fitness for modelling purposes."
    ]
@@ -37,7 +37,7 @@
    "source": [
     "## Data Uncertainties\n",
     "\n",
-    "As mentioned in the [Data Misfit](#Data-Misfit) section, we want to assign **data uncertainties** that reflect our ability to replicate the observed data, within an acceptable level. While many strategies can be used, we are going to demonstrate basic principles to assess the effectiveness of a chosen method. We will employ two basic strategies:\n",
+    "As mentioned in the [Data Misfit](#Data-Misfit) section, we want to assign **data uncertainties** that reflect our inability to perfectly replicate the observed data, within an acceptable level. While many strategies can be used, we are going to demonstrate basic principles to assess the effectiveness of a chosen method. We will employ two basic strategies:\n",
     "\n",
     "- [Floor](#Constant-floor) value set as a constant,\n",
     "- [Amplitude-based (%)](#Amplitude-(%)) values with variable weights.\n",
