--- a/docs/inversion/fundamentals.ipynb
+++ b/docs/inversion/fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "02833ef3",
+   "id": "4c07b33f",
    "metadata": {},
    "source": [
     "# Inversion Fundamentals\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e01d2fb6",
+   "id": "7ca9cdcd",
    "metadata": {},
    "source": [
     "## Forward simulation\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "319ac95d",
+   "id": "e27917dd",
    "metadata": {},
    "source": [
     "### Example\n",
@@ -79,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1d74e4ae",
+   "execution_count": null,
+   "id": "e6a4e2e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5c9df792",
+   "execution_count": null,
+   "id": "8db59cb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbbeb497",
+   "id": "7142e892",
    "metadata": {},
    "source": [
     "For given values for $\\mathbf{m}$, we have a way to compute data $\\mathbf{d}$. For example, for\n",
@@ -108,28 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "aea2444f",
+   "execution_count": null,
+   "id": "91136ca9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.dot(F, [0.5, 0.25])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1d679e3b",
+   "id": "e8de9149",
    "metadata": {},
    "source": [
     "(inverse_problem)=\n",
@@ -197,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11685f70",
+   "id": "7734fb57",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -219,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "674b375d",
+   "id": "2bd54870",
    "metadata": {},
    "source": [
     "Since $\\mathbf{F}$ does not have an inverse, we can instead solve the least-norm problem\n",
@@ -245,18 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b2622335",
+   "execution_count": null,
+   "id": "45d24496",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Singular matrix\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    np.linalg.solve(np.dot(F.T, F), F.T * np.r_[1])\n",
@@ -266,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a04419c",
+   "id": "32fc5676",
    "metadata": {},
    "source": [
     "We can get around this by adding a small value to `regularize` the system such that\n",
@@ -278,32 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0d01b404",
+   "execution_count": null,
+   "id": "93230c56",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.2],\n",
-       "       [0.4]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.linalg.solve(\n",
-    "    np.dot(F.T, F)  + 1e-12 * np.eye(2), \n",
-    "    F.T * np.r_[1]\n",
-    ")"
+    "np.linalg.solve(np.dot(F.T, F) + 1e-12 * np.eye(2), F.T * np.r_[1])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b1875c12",
+   "id": "702d7cbb",
    "metadata": {},
    "source": [
     "We have found a solution to this under-determined problem: $m = [0.2,\\; 0.4]$. This result is known as the `least-norm` solution, which differs from the true answer $m = [0.5, \\;0.25]$. Other \"better\" solutions could be found if more information is provided to the inverse problem to push the model towards expected values. This will be the topic of the [Regularization Section](regularization.ipynb)"
@@ -311,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7cfa4fa",
+   "id": "e59693ab",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>"
@@ -323,18 +289,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
   }
  },
  "nbformat": 4,
