Update notebook files

--- a/docs/case_study/data.ipynb
+++ b/docs/case_study/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e769916",
+   "id": "39c48a45",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d79c7c14",
+   "id": "0e28c183",
    "metadata": {},
    "source": [
     "(dc-data)=\n",
     "\n",
     "## Direct-current resistivity (DCR)\n",
     "\n",
-    "A ground dipole-dipole survey was simulated over the main ore body. The survey was acquired with 40 m dipole length, data measured on sever receivers per transmitter dipole. Line separation was set to 100 m ([Figure 6](dc_topo)).\n",
+    "A ground dipole-dipole survey was simulated over the main ore body. The survey was acquired with 40 m dipole length, data measured on seven receivers per transmitter dipole. Line separation was set to 100 m ([Figure 5](dc_topo)).\n",
     "\n",
     "```{figure} ./images/DCR_data.png\n",
     "---\n",
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee337c7",
+   "id": "38397ecb",
    "metadata": {},
    "source": [
     "(magnetic-data)=\n",
     "\n",
     "## Airborne magnetic survey (TMI)\n",
     "\n",
-    "We simulated Residual Magnetic Intensity (RMI) data along East-West lines at a 40 m drape height above topography. The line spacing was set to 200 m, along downsampling of 10 m.\n",
+    "We simulated Residual Magnetic Intensity (RMI) data along East-West lines at a 40 m drape height above topography. The line spacing was set to 200 m, with along-line data downsampled to 10 m.\n",
     "\n",
     "The following inducing field parameters were used for the forward simulation:\n",
     "\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8362181",
+   "id": "38687f97",
    "metadata": {},
    "source": [
     "(ftg-data)=\n",
@@ -93,7 +93,7 @@
     "\n",
     "An airborne fixed-wing full-tensor gravity gradiometry (FTG) survey was simulated at a nominal drape height of 60 m above topography.\n",
     "\n",
-    "The FTG system measures six independent components of the gradient tensor: Txx, Txy, Txz, Tyy, Tyz and Tzz. Data were leveled, free-air and terrain corrected with 2.67 g/cc reference density.\n",
+    "The FTG system measures six independent components of the gradient tensor: $g_{xx},\\; g_{xy},\\; g_{xz},\\; g_{yy},\\; g_{yz}$ and $g_{zz}$. Data were leveled, free-air and terrain corrected with 2.67 g/cc reference density.\n",
     "\n",
     "\n",
     "```{figure} ./images/GG_data.png\n",
@@ -101,13 +101,13 @@
     "scale: 50%\n",
     "name: ftg_data\n",
     "---\n",
-    "Components of the gravity gradiometry data measured over the zone of interest (from to bottom): (left) Txx, Tyy and Tzz components, (right) Tyx, Txz and Tyz components.\n",
+    "(Top) Components of the gravity gradiometry data measured over the zone of interest. (Bottom) The green and red marker indicate the flight direction.\n",
     "```\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53388fd5",
+   "id": "68137185",
    "metadata": {},
    "source": [
     "## Ground gravity survey\n",
