--- a/docs/case_study/unconstrained_inversion.ipynb
+++ b/docs/case_study/unconstrained_inversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e6a9d3f",
+   "id": "53c2b25c",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "323c7ec1",
+   "id": "e48be50c",
    "metadata": {},
    "source": [
     "## Magnetic inversion\n",
@@ -29,10 +29,9 @@
     "---\n",
     "(Top) (left) Observed and (right) predicted data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
     "\n",
-    "(Bottom) Horizontal slice at 255 m elevation for (left) the smooth and (right) compact magnetization models. The outline of the inferred ore shell is shown in gray for reference.\n",
+    "(Bottom) Horizontal slice at 255 m elevation for (left) the smooth and (right) compact magnetization models.\n",
     "```\n",
     "\n",
-    "We note a somewhat good correlation between the shape of the inferred ore shell and magnetic model. The magnetization appears to be shifted southward and at depth, as seen in profile.\n",
     "\n",
     "[Add more here]\n",
     "\n",
@@ -42,12 +41,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f097a190",
+   "id": "502f8f6f",
    "metadata": {},
    "source": [
     "## Ground gravity inversion\n",
     "\n",
-    "The ground gravity data, reference terrain corrected at 2.67 g/cc, were also inverted in the same fashion. A floor uncertainty value of 0.05 mGal was assigned.\n",
+    "The ground gravity data (terrain corrected at 2.67 g/cc) were also inverted in the same fashion. A floor uncertainty value of 0.05 mGal was assigned.\n",
     "\n",
     "\n",
     "\n",
@@ -68,12 +67,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c02f5e4a",
+   "id": "777f06aa",
    "metadata": {},
    "source": [
     "## Gravity gradiometry inversion\n",
     "\n",
-    "The airborne tensor terrain corrected (2.67 g/cc) gravity data were also inverted in the same fashion. A floor uncertainty value of 0.2 Eotvos was assigned to all the components.\n",
+    "The airborne tensor gravity data (terrain corrected at 2.67 g/cc) were also inverted in the same fashion. A floor uncertainty value of 0.2 Eotvos was assigned to all the components.\n",
     "\n",
     "\n",
     "\n",
@@ -84,7 +83,7 @@
     "---\n",
     "(Top) (left) Observed and (right) predicted gxx data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
     "\n",
-    "(Bottom) Horizontal slice for (left) the smooth and (right) L1-norm density contrast models. The outline of the inferred ore shell is shown in gray for reference.\n",
+    "(Bottom) Horizontal slice for (left) the smooth and (right) L1-norm density contrast models.\n",
     "```\n",
     "\n",
     "We note a slight correlation to the shape of the known ore body\n",
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc3d1b9b",
+   "id": "16429dac",
    "metadata": {},
    "source": [
     "## Direct-current inversion\n",
@@ -114,7 +113,7 @@
     "(Top) (left) Observed and (right) predicted apparent resistivity data after convergence.\n",
     "\n",
     "(Bottom)\n",
-    "(Left) Horizontal section at 240 m elevation through the compact density model. Outline of the hematite shell is shown in grey for reference.\n",
+    "(Left) Horizontal section at 240 m elevation through the compact density model.\n",
     "(Right) Vertical NS section through the recovered smooth resistivity model.\n",
     "```\n",
     "\n",
