--- a/docs/inversion/index.ipynb
+++ b/docs/inversion/index.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a92fee4a",
+   "id": "9f54c216",
    "metadata": {},
    "source": [
-    "# Geophysical Inversions\n",
+    "# Theory\n",
     "\n",
     "This module documents the use of [SimPEG](simpeg.xyz) for geophysical data inversion with user-interface (UIjson) made available through the [Mira Geoscience-geoapps](https://geoapps.readthedocs.io/en/latest/) project. While the code itself has its own documentation, there is a need to demonstrate the effect of parameters controlling the inversion. This document is meant to be a reference guide with practical examples to help practitioners with their inversion work.\n",
     "\n",
