Bring back changes from git. Fix citation.

--- a/docs/inversion/fundamentals.ipynb
+++ b/docs/inversion/fundamentals.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c09b14b8",
+   "id": "39f62ec6",
    "metadata": {},
    "source": [
     "# Inversion Fundamentals\n",
     "\n",
-    "This section provides the mathematical background to understand the inversion algorithm. We are going to use standard terminalogy and nomenclature used in the literature as a framework. Even though we are going to use mathematical expressions, it is only a vehicle to help in understanding the influence of different parameters controlling the outcome of an inversion."
+    "This section provides the mathematical background to understand the inversion algorithm. We are going to use standard terminology and nomenclature used in the literature as a framework. Even though we are going to use mathematical expressions, it is only a vehicle to help in understanding the influence of different parameters controlling the outcome of an inversion."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "614e6d32",
+   "id": "c96ce5dd",
    "metadata": {},
    "source": [
     "## Forward simulation\n",
@@ -33,14 +33,14 @@
     "- [Gravity](gravity.ipynb)\n",
     "- [Magnetics](magnetic.ipynb)\n",
     "\n",
-    "to ellaborate partial differential equations for EM problems:\n",
+    "to elaborate partial differential equations for EM problems:\n",
     "\n",
     "- [Direct Current](dc_ip.ipynb)\n",
     "- [Magnetotellurics](mt.ipynb)\n",
     "- [Frequency-Domain EM](frequency_em.ipynb)\n",
     "- [Time-Domain EM](time_em.ipynb)\n",
     "\n",
-    "All what matters at this point is that `SimPEG` knows how to compute data given a model $\\mathbf{m}$.\n",
+    "All that matters at this point is that `SimPEG` knows how to compute data given a model $\\mathbf{m}$.\n",
     "\n",
     "![forward_mag_susc](./images/forward_mag_susc.png)\n",
     "\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fd58e7d",
+   "id": "d2460492",
    "metadata": {},
    "source": [
     "### Example\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7539bbff",
+   "id": "f601b150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c229ada",
+   "id": "e0fb813b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3583f44",
+   "id": "3df9fec2",
    "metadata": {},
    "source": [
     "For given values for $\\mathbf{m}$, we have a way to compute data $\\mathbf{d}$. For example, for\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54e29ae7",
+   "id": "d62d3acf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2a72672",
+   "id": "04783b5e",
    "metadata": {},
    "source": [
     "(inverse_problem)=\n",
@@ -132,7 +132,7 @@
     "\\mathbf{m} = \\mathbf{F}^{-1} \\mathbf{d}\n",
     "$$\n",
     "\n",
-    "but this operation is in practice never possible. First, there are too many unknowns compared to the amount of data, so $\\mathbf{F}^{-1}$ does not exist. Secondly, the data are generally noisy so that we would have:\n",
+    "but this operation is never possible in practice. First, there are too many unknowns compared to the amount of data, so $\\mathbf{F}^{-1}$ does not exist. Secondly, the data are generally noisy so that we would have:\n",
     "\n",
     "$$\n",
     "\\mathbf{m} = \\mathbf{F}^{-1} (\\mathbf{d + e})\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c08d46f2",
+   "id": "56d21a9c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -194,7 +194,6 @@
     "### Example\n",
     "\n",
     "We can reuse the two-parameter problem above to illustrate the inverse problem. We are going to ignore the issue of noise for now and simply look at the under-determined problem\n",
-    "\n",
     "$$\n",
     "\\large[\\begin{array}{ccc}\n",
     "1 & 2\n",
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88576e7a",
+   "id": "ee069c87",
    "metadata": {},
    "source": [
     "Since $\\mathbf{F}$ does not have an inverse, we can instead solve the least-norm problem\n",
@@ -235,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "913bd37f",
+   "id": "40ee9b73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "507b81ef",
+   "id": "de400bb8",
    "metadata": {},
    "source": [
     "We can get around this by adding a small value to `regularize` the system such that\n",
@@ -260,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b463056",
+   "id": "255f0896",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70791f3a",
+   "id": "b5521668",
    "metadata": {},
    "source": [
     "We have found a solution to this under-determined problem: $m = [0.2,\\; 0.4]$. This result is known as the `least-norm` solution, which differs from the true answer $m = [0.5, \\;0.25]$. Other \"better\" solutions could be found if more information is provided to the inverse problem to push the model towards expected values. This will be the topic of the [Regularization Section](regularization.ipynb)"
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9c76c4f",
+   "id": "80cdc452",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>"
