--- a/docs/inversion/regularization.ipynb
+++ b/docs/inversion/regularization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a646a16c",
+   "id": "773ee150",
    "metadata": {},
    "source": [
     "# Regularization\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f84f11",
+   "id": "da138760",
    "metadata": {},
    "source": [
     "(l2-norm)=\n",
@@ -50,7 +50,7 @@
     "\n",
     "### Model smoothness\n",
     "\n",
-    "A second set of terms can be added to the regularization function to apply constraints on the model gradients, or roughness of the solution. Following the notation used in {cite:p}`LiOldenburg1998` and others before,\n",
+    "A second set of terms can be added to the regularization function to apply constraints on the model gradients, or roughness of the solution. Following the notation used in {cite:t}`LiOldenburg1998` and others before,\n",
     "\n",
     "$$\n",
     "f_x(\\mathbf{m}) = \\mathbf{G}_x (\\mathbf{m} - \\mathbf{m}_{ref}) \\;,\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f04ea5a4",
+   "id": "e137a3b6",
    "metadata": {},
    "source": [
     "(lp-norm)=\n",
@@ -115,7 +115,7 @@
     "## Sparse regularization\n",
     "\n",
     "\n",
-    "It is possible to generalize the conventional least-squares approach such that we can recover different solutions with variable degrees of sparsity {cite:p}`fournier_2019`. The goal is to explore the model space by changing our assumption about the character of the solution, in terms of volume of the anomalies and sharpness of contrasts between domains. We can do this by changing the \"ruler\" by which we evaluate the model function $f(\\mathbf{m})$.\n",
+    "It is possible to generalize the conventional least-squares approach such that we can recover different solutions with variable degrees of sparsity {cite:t}`fournier_2019`. The goal is to explore the model space by changing our assumption about the character of the solution, in terms of volume of the anomalies and sharpness of contrasts between domains. We can do this by changing the \"ruler\" by which we evaluate the model function $f(\\mathbf{m})$.\n",
     "\n",
     "\n",
     "### Approximated $L_p$-norm\n",
@@ -149,7 +149,7 @@
     "\\mathbf{R}_i = {\\frac{1}{\\left( {{f(m)^{(k-1)}_i}}^{2} + \\epsilon^2 \\right)^{1-p/2 }}}\\,.\n",
     "$$\n",
     "\n",
-    "Here the superscript $(k)$ denotes the inversion iteration number. This is also known as an iterative re-weighted least-squares (IRLS) method. For more details on the implementation refer to {cite:p}`fournier_2019`.\n",
+    "Here the superscript $(k)$ denotes the inversion iteration number. This is also known as an iterative re-weighted least-squares (IRLS) method. For more details on the implementation refer to {cite:t}`fournier_2019`.\n",
     "\n",
     "The next two sub-sections apply this methodology to the [model smallness](#Reference-model) and [model smoothness](#Model-smoothness) regularizers.\n",
     "\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a769dd31",
+   "id": "28ea7696",
    "metadata": {},
    "source": [
     "### Smallness norm model\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2b43b60",
+   "id": "e1d4c976",
    "metadata": {},
    "source": [
     "### Smoothness norm model\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07200024",
+   "id": "71e7fd8b",
    "metadata": {},
    "source": [
     "## Mixed norms\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a279bb3f",
+   "id": "dbea14fa",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n"
