--- a/docs/case_study/data.ipynb
+++ b/docs/case_study/data.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39c48a45",
+   "id": "332ab4a6",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
     "# Data\n",
     "\n",
-    "This section provides details about the three datasets simulated for this tutorial:\n",
+    "This section provides details about the various datasets simulated for this tutorial:\n",
     "\n",
-    "- [Direct-current resistivity (DCR)](dc-data)\n",
     "- [Magnetic total field (HeliTEM)](magnetic-data)\n",
     "- [Airborne full-tensor gravity gradiometry (FTG)](ftg-data)\n",
+    "- [Direct-current resistivity (DCR)](dc-data)\n",
+    "- [Airborne Tipper (NSEM)](tipper-data)\n",
     "\n",
     "\n",
     "```{figure} ./images/project_area.png\n",
@@ -29,31 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e28c183",
-   "metadata": {},
-   "source": [
-    "(dc-data)=\n",
-    "\n",
-    "## Direct-current resistivity (DCR)\n",
-    "\n",
-    "A ground dipole-dipole survey was simulated over the main ore body. The survey was acquired with 40 m dipole length, data measured on seven receivers per transmitter dipole. Line separation was set to 100 m ([Figure 5](dc_topo)).\n",
-    "\n",
-    "```{figure} ./images/DCR_data.png\n",
-    "---\n",
-    "scale: 50%\n",
-    "name: dc_topo\n",
-    "---\n",
-    "Pseudo-sections of apparent resisitvity and topography from the SRTM elevation model.\n",
-    "```\n",
-    "\n",
-    "Note the large contrast in apparent resistivity between the western and eastern regions of the survey. This can be explained by a conductive tailing layer West of the deposit.\n",
-    "\n",
-    "<p style=\"page-break-after:always;\"></p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38397ecb",
+   "id": "d9b82fe3",
    "metadata": {},
    "source": [
     "(magnetic-data)=\n",
@@ -84,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38687f97",
+   "id": "0bba7287",
    "metadata": {},
    "source": [
     "(ftg-data)=\n",
@@ -107,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68137185",
+   "id": "974b28c1",
    "metadata": {},
    "source": [
     "## Ground gravity survey\n",
@@ -122,6 +99,58 @@
     "---\n",
     "Vertical component of the gravity field (gz) measured over the zone of interest.\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef90b307",
+   "metadata": {},
+   "source": [
+    "(dc-data)=\n",
+    "\n",
+    "## Direct-current resistivity (DCR)\n",
+    "\n",
+    "A ground dipole-dipole survey was simulated over the main ore body. The survey was acquired with 40 m dipole length, data measured on seven receivers per transmitter dipole. Line separation was set to 100 m ([Figure 5](dc_topo)).\n",
+    "\n",
+    "```{figure} ./images/DCR_data.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: dc_topo\n",
+    "---\n",
+    "Pseudo-sections of apparent resisitvity and topography from the SRTM elevation model.\n",
+    "```\n",
+    "\n",
+    "Note the large contrast in apparent resistivity between the western and eastern regions of the survey. This can be explained by a conductive tailing layer West of the deposit.\n",
+    "\n",
+    "<p style=\"page-break-after:always;\"></p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4de1190",
+   "metadata": {},
+   "source": [
+    "(tipper-data)=\n",
+    "\n",
+    "## Airborne tipper (Natural Source EM)\n",
+    "\n",
+    "An airborne tipper survey was simulated over the main ore body. The survey was acquired along East-West lines, 400 m spacing, at a drape height of 60 m ([Figure 5](dc_topo)). \n",
+    "Tipper systems collect three orthogonal components of the ambiant magnetic field ($H_x,\\;H_y,\\;H_z$) in time. Similar to magnetotelluric surveys, the ratios of the components are used to circumvent the unknown source of the EM signal. The transfer functions, or tipper, are calculated by taking the ratio of the fields for two polarizations of the magnetic fields (EW and NS). The measurements are generally provided in the frequency-domain with both a real and an imaginary component.   \n",
+    "For more background information about natural source methods, see [em.geosci](https://em.geosci.xyz/content/geophysical_surveys/ztem/index.html)\n",
+    "\n",
+    "The survey used in this tutorial mimics the commercial [ZTEM](https://geotech.ca/services/electromagnetic/ztem-z-axis-tipper-electromagnetic-system/) system that measures the magnetic field at 6 frequencies (30, 45, 90, 180, 360 and 720 Hz). The base station is located at the center of the survey area.\n",
+    "\n",
+    "```{figure} ./images/tipper_data.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: tipper_topo\n",
+    "---\n",
+    "Tipper data displayed by the 2D Profiler at all 6 frequencies for the 4 components ($T_{zx}$, $T_{zy}$, real and imaginary).\n",
+    "```\n",
+    "\n",
+    "Note that the position of the known conductor correlate with large variations in the tipper data.\n",
+    "\n",
+    "<p style=\"page-break-after:always;\"></p>"
    ]
   }
  ],
