--- a/docs/case_study/introduction.ipynb
+++ b/docs/case_study/introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a6ca88da",
+   "id": "59c368c0",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -22,9 +22,10 @@
     "This chapter demonstrates how to run standalone and joint inversions of geophysical data using SimPEG and the user-interface created for Geoscience ANALYST. We generated several synthetic surveys over the Flin Flon model to simulate an exploration program over a VMS deposit.\n",
     "The goal is to use ground and airborne geophysics to characterize the physical property and shape of the ore body and host rocks. This case study focuses on the following three datasets and respective physical properties:\n",
     "\n",
-    "- [Direct-current resistivity (DCR)](dc-data) -> resistivity\n",
     "- [Magnetic Total Field (TMI)](magnetic-data) -> magnetization\n",
     "- [Full-tensor gravity gradiometry (FTG)](ftg-data) -> density\n",
+    "- [Direct-current resistivity (DCR)](dc-data) -> resistivity (shallow)\n",
+    "- [Airborne Tipper (NSEM)](tipper-data) -> resistivity (deep)\n",
     "\n",
     "The datasets are first inverted independently ([Figure 1](standalone)), then jointly with a cross-gradient coupling constraint ([Figure 2](joint)).\n",
     "\n",
