Update text in background

--- a/docs/case_study/background.ipynb
+++ b/docs/case_study/background.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cde90f40",
+   "id": "a002597a",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
     "# The Set Up\n",
     "\n",
-    "This tutorial on geophysical inversion is framed around the well-known VMS deposit - the copper-zinc-gold Flin Flon mine in northern Manitoba, Canada. Our goal is to provided a step-by-step process to invert data from various geophysical methods and to test their resolving capabilities within a semi-realistic exploration context.\n",
+    "This tutorial on geophysical inversion is framed around a well-known copper-zinc VMS deposit - the Flin Flon mine in northern Manitoba, Canada. Our goal is to provided a step-by-step process to invert data from various geophysical methods and to test their resolving capabilities within a semi-realistic exploration context.\n",
     "\n",
-    "The local geology of Flin Flon consists mainly of basalt and mafic volcanic formations (green and blue), with discrete occurrences of rhyolite units (yellow) that host the mineralization as shown in [Figure 2](setup_flinflon). \n",
+    "The local geology of Flin Flon consists mainly of basalt and mafic volcanic formations (green and blue), with discrete occurrences of rhyolite units (yellow) that host the mineralization as shown in [Figure 2](setup_flinflon).\n",
     "\n",
     "\n",
     "```{figure} ./images/setup_flinflon.png\n",
@@ -22,9 +22,9 @@
     "Discrete geological and physical properties for the simplified Flin Flon model.\n",
     "```\n",
     "\n",
-    "The entire region was later deformed by large tectonic events that folded and faulted the stratigraphy in its current form. The mineralization occurs along thin lences dipping steeply towards the South-East. \n",
+    "The entire region was later deformed by large tectonic events that folded and faulted the stratigraphy in its current form. The mineralization occurs along thin lences dipping steeply towards the South-East.\n",
     "\n",
-    "The area has been studied extensively over the years, yielding large amount of petrophysical data made available by [Natural Resources Canada (NRCan)](https://ostrnrcan-dostrncan.canada.ca/entities/publication/73d767d8-ee1c-4bab-a2da-52dcf83faa06), as shown in [Figure 3](global_map). \n",
+    "The area has been studied extensively over the years, yielding large amount of petrophysical data made available by [Natural Resources Canada (NRCan)](https://ostrnrcan-dostrncan.canada.ca/entities/publication/73d767d8-ee1c-4bab-a2da-52dcf83faa06), as shown in [Figure 3](global_map).\n",
     "\n",
     "```{figure} ./images/map_flinflon.png\n",
     "---\n",
@@ -60,10 +60,8 @@
     "height: 400px\n",
     "name: ore_body\n",
     "---\n",
-    "Discrete geological and physical properties for the simplified Flin Flon model.\n",
-    "```\n",
-    "\n",
-    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/inversion_demo.geoh5).\n"
+    "Discrete geological and physical properties for the simplified Flin Flon model [Download here](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/inversion_demo.geoh5).\n",
+    "```"
    ]
   }
  ],
