Re-haul of chapters

--- a/docs/inversion/fundamentals.ipynb
+++ b/docs/inversion/fundamentals.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39f62ec6",
+   "id": "c96f9270",
    "metadata": {},
    "source": [
-    "# Inversion Fundamentals\n",
+    "# Background\n",
     "\n",
     "This section provides the mathematical background to understand the inversion algorithm. We are going to use standard terminology and nomenclature used in the literature as a framework. Even though we are going to use mathematical expressions, it is only a vehicle to help in understanding the influence of different parameters controlling the outcome of an inversion."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c96ce5dd",
+   "id": "fdbab9b1",
    "metadata": {},
    "source": [
     "## Forward simulation\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2460492",
+   "id": "3763d71d",
    "metadata": {},
    "source": [
     "### Example\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f601b150",
+   "id": "5440b947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0fb813b",
+   "id": "3b0c3ab2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3df9fec2",
+   "id": "09ddd4b3",
    "metadata": {},
    "source": [
     "For given values for $\\mathbf{m}$, we have a way to compute data $\\mathbf{d}$. For example, for\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d62d3acf",
+   "id": "31229942",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04783b5e",
+   "id": "c1341098",
    "metadata": {},
    "source": [
     "(inverse_problem)=\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56d21a9c",
+   "id": "9c09c343",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee069c87",
+   "id": "d48040bb",
    "metadata": {},
    "source": [
     "Since $\\mathbf{F}$ does not have an inverse, we can instead solve the least-norm problem\n",
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40ee9b73",
+   "id": "6440f625",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de400bb8",
+   "id": "e74a662b",
    "metadata": {},
    "source": [
     "We can get around this by adding a small value to `regularize` the system such that\n",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "255f0896",
+   "id": "00f0e423",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5521668",
+   "id": "edc5528f",
    "metadata": {},
    "source": [
     "We have found a solution to this under-determined problem: $m = [0.2,\\; 0.4]$. This result is known as the `least-norm` solution, which differs from the true answer $m = [0.5, \\;0.25]$. Other \"better\" solutions could be found if more information is provided to the inverse problem to push the model towards expected values. This will be the topic of the [Regularization Section](regularization.ipynb)"
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80cdc452",
+   "id": "464cee86",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>"
