--- a/docs/case_study/background.ipynb
+++ b/docs/case_study/background.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a002597a",
+   "id": "6a84bad2",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -10,9 +10,6 @@
     "# The Set Up\n",
     "\n",
     "This tutorial on geophysical inversion is framed around a well-known copper-zinc VMS deposit - the Flin Flon mine in northern Manitoba, Canada. Our goal is to provided a step-by-step process to invert data from various geophysical methods and to test their resolving capabilities within a semi-realistic exploration context.\n",
-    "\n",
-    "The local geology of Flin Flon consists mainly of basalt and mafic volcanic formations (green and blue), with discrete occurrences of rhyolite units (yellow) that host the mineralization as shown in [Figure 2](setup_flinflon).\n",
-    "\n",
     "\n",
     "```{figure} ./images/setup_flinflon.png\n",
     "---\n",
@@ -22,7 +19,8 @@
     "Discrete geological and physical properties for the simplified Flin Flon model.\n",
     "```\n",
     "\n",
-    "The entire region was later deformed by large tectonic events that folded and faulted the stratigraphy in its current form. The mineralization occurs along thin lences dipping steeply towards the South-East.\n",
+    "The local geology of Flin Flon consists mainly of basalt and mafic volcanic formations (green and blue), with discrete occurrences of rhyolite units (yellow) that host the mineralization as shown in [Figure X](setup_flinflon).\n",
+    "The entire region was later deformed by large tectonic events that over-thursted, folded and faulted the stratigraphy in its current form. The mineralization occurs along thin lences dipping steeply towards the South-East.\n",
     "\n",
     "The area has been studied extensively over the years, yielding large amount of petrophysical data made available by [Natural Resources Canada (NRCan)](https://ostrnrcan-dostrncan.canada.ca/entities/publication/73d767d8-ee1c-4bab-a2da-52dcf83faa06), as shown in [Figure 3](global_map).\n",
     "\n",
@@ -53,14 +51,25 @@
     "\n",
     "```\n",
     "\n",
-    "From this simplified (conceptual) model of Flin Flon, we created a 3D petrophysical model around the mineralization [Figure 4](ore_body). We added a thick (40 m) overburden layer (tailings) of relatively low density and low resistivity to test the depth of penetration of the various survey types. This model was used to generate all the synthetic data used in this tutorial.\n",
-    "\n",
+    "From this simplified (conceptual) model of Flin Flon, we created a 3D petrophysical model around the mineralization [Figure X](ore_body). We added a thick (40 m) overburden layer (tailings) of relatively low density and low resistivity to test the depth of penetration of the various survey types. \n",
     "```{figure} ./images/ore_body.png\n",
     "---\n",
     "height: 400px\n",
     "name: ore_body\n",
     "---\n",
     "Discrete geological and physical properties for the simplified Flin Flon model [Download here](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/inversion_demo.geoh5).\n",
+    "```\n",
+    "\n",
+    "This model was used to generate all the synthetic data used in this tutorial. [Figure X](project_area) shows the layout of the various ground and airborne surveys used in this tutorial.\n",
+    "\n",
+    "\n",
+    "```{figure} ./images/project_area.png\n",
+    "\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: project_area\n",
+    "---\n",
+    "Data coverage for the ground gravity (black), airborne gravity gradiometry (red), airborne magnetics and tipper (green) and direct-current (blue) surveys. Outline of the ore shell (gray) is shown for reference.\n",
     "```"
    ]
   }
